<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewEmployee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textViewColor" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/buttonCosmetic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonCosmetic"
            app:backgroundTint="@color/buttonColor" />

        <Button
            android:id="@+id/buttonReceipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonReceipt"
            app:backgroundTint="@color/buttonColor" />

        <Button
            android:id="@+id/buttonDistribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonDistribution"
            app:backgroundTint="@color/buttonColor" />

        <Button
            android:id="@+id/buttonPurchaseList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonPurchaseList"
            app:backgroundTint="@color/buttonColor" />

        <Button
            android:id="@+id/buttonReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonReport" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>