<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CosmeticsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listViewCosmetic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonAddC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAdd"
            app:backgroundTint="@color/buttonColor" />

        <Button
            android:id="@+id/buttonUpdC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonUpd"
            app:backgroundTint="@color/buttonColor" />

        <Button
            android:id="@+id/buttonDelC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonDel"
            app:backgroundTint="@color/buttonColor" />

        <Button
            android:id="@+id/buttonSync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSync" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>