<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDateFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewDateFrom" />

            <EditText
                android:id="@+id/editTextDateFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textViewDateTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewDateTo" />

            <EditText
                android:id="@+id/editTextDateTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <Button
                android:id="@+id/buttonPdf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonPdf" />

            <Button
                android:id="@+id/buttonCancelRC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonCancel" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>