<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <Spinner
        android:id="@+id/spinnerCosmeticName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/textViewColor" />

    <EditText
        android:id="@+id/editTextCountSC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextCountSC"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSaveSC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/buttonSaveSC" />

        <Button
            android:id="@+id/buttonCancelSC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/buttonCancelSC" />
    </LinearLayout>
</LinearLayout>